Finished the whole design

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="viewport"
+			content="height=device-height, initial-scale=1.0" />
 		<!-- displays site properly based on user's device -->
 
 		<link
@@ -178,7 +181,7 @@
 			</main>
 		</div>
 
-		<div class="attribution">
+		<footer class="attribution">
 			Challenge by
 			<a
 				href="https://www.frontendmentor.io?ref=challenge"
@@ -188,6 +191,6 @@
 			<a href="https://github.com/OnyedikachiOzoani" target="github"
 				>Onyedikachi Ozoani</a
 			>.
-		</div>
+		</footer>
 	</body>
 </html>
